<resources>
    <string name="app_name">Strings</string>
    <string name="album_art">Album Art</string>
    <string name="track_title">Track Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="add_songs">Add Songs</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="more_options">More options</string>
    <string name="playlist_title">Playlist Title</string>
    <string name="empty_playlist">There are no songs in this playlist</string>
    <string name="default_playlist_info">0 songs, 00h 00m 00s</string>
    <string name="shuffle_button">Shuffle Button</string>
    <string name="next_button">Next Button</string>
    <string name="play_button">Play Button</string>
    <string name="previous_button">Previous Button</string>
    <string name="repeat_button">Repeat Button</string>
    <string name="time_zero">0:00</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="remove_from_library">Remove from Library</string>
    <string name="empty_library_message_1">No music files in Music Library.</string>
    <string name="empty_library_message_2">Try adding files to your \'Music\' folder.</string>
    <string name="playlist_name">Playlist name</string>
    <string name="album_art_thumbnail">Album Art Thumbnail</string>
    <string name="album_name">Album Name</string>
    <string name="rate_app">Rate</string>
    <string name="about_us">About</string>
    <string name="share_app">Share</string>
    <string name="playing_from">Current Playlist:</string>
    <string name="music_library">Music Library</string>
    <string name="created_by">Created by:</string>
    <string name="developer_name">Gaurav Sahu</string>
    <string name="support_email">contact.gauravsahu@gmail.com</string>
    <string name="app_logo">App logo</string>
    <string name="appFullName">Strings Music Player</string>
    <string name="default_version">Version 1.0</string>
</resources>
