<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/appDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/versionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/default_version"
        android:textColor="#000000"
        android:layout_below="@id/appDetail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/developerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_name"
        android:textColor="#000000"
        android:layout_below="@id/versionNumber"
        android:layout_centerHorizontal="true"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support_email"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_below="@id/developerName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />

</RelativeLayout>