<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mediaplayer.strings.activities.MediaPlayerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight=".12"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.7">

            <LinearLayout
                android:id="@+id/albumArtTNLayout"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:orientation="vertical"
                android:background="#d9c6c6"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp">

                <ImageView
                    android:id="@+id/albumArtThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/album_art_thumbnail" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/trackInfoBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:baselineAligned="false"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/titleBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_title"
                    android:textColor="#000000"
                    android:textIsSelectable="false"
                    android:textSize="18sp"
                    android:typeface="sans"
                    android:maxLines="1"
                    android:ellipsize="end" />

                <TextView
                    android:id="@+id/artistBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_name"
                    android:textColor="#000000"
                    android:textIsSelectable="false"
                    android:textSize="12sp"
                    android:typeface="sans"
                    android:ellipsize="end"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/albumBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/album_name"
                    android:textColor="#000000"
                    android:textIsSelectable="false"
                    android:textSize="12sp"
                    android:typeface="sans"
                    android:maxLines="1"
                    android:ellipsize="end" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/playing_from"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="#000000"
                android:textSize="18sp"
                android:typeface="sans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="7dp"/>

            <TextView
                android:id="@+id/playingFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_library"
                android:textColor="#000000"
                android:maxLines="1"
                android:textSize="18sp"
                android:typeface="sans" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/albumArtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.80"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/albumArt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/album_art" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.08"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/songProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:thumb="@drawable/ic_thumb"
                android:splitTrack="false"
                android:progressDrawable="@drawable/seekbar_progress"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:thumbPosition="midpoint"
                android:maxHeight="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/timeElapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/time_zero"
                android:textColor="#000000"
                android:layout_weight="0"/>

            <TextView
                android:id="@+id/filler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text=""
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/trackDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:text="@string/time_zero"
                android:textColor="#000000"
                android:layout_weight="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical">

            <ImageButton
                android:id="@+id/repeatButton"
                android:src="@drawable/ic_repeat_black_18dp"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/repeat_button"
                android:onClick="repeat"
                android:layout_weight="0.20" />

            <ImageButton
                android:id="@+id/previousButton"
                android:src="@drawable/btn_previous"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_weight="0.20"
                android:contentDescription="@string/previous_button"
                android:onClick="previous"/>

            <ImageButton
                android:id="@+id/playButton"
                android:src="@drawable/btn_play"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.20"
                android:contentDescription="@string/play_button"
                android:onClick="play" />

            <ImageButton
                android:id="@+id/nextButton"
                android:src="@drawable/btn_next"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_weight="0.20"
                android:contentDescription="@string/next_button"
                android:onClick="next"/>

            <ImageButton
                android:id="@+id/shuffleButton"
                android:src="@drawable/ic_shuffle_black_18dp"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/shuffle_button"
                android:onClick="shuffle"
                android:layout_weight="0.20" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>