<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:onClick="callPlaylistActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_item_height">

        <TextView
            android:id="@+id/playlistTitle"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlist_title"
            android:textSize="17sp"
            android:textColor="#030303"
            android:layout_marginStart="17dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/playlistInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_playlist_info"
            android:textSize="14sp"
            android:textColor="#555555"
            android:layout_marginStart="17dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/playlistTitle"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/morePlaylistOptionsButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_item_height"
        android:src="@drawable/ic_more_vert_black_24dp"
        android:contentDescription="@string/more_options"
        android:background="@null"
        android:adjustViewBounds="false"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:onClick="showPlaylistsPopupMenu"/>

</RelativeLayout>