<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        android:background="#059DF1"
        android:layout_weight="0.01">

        <TextView
            android:id="@+id/playlistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist_title"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="20sp"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/playlistDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_playlist_info"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="15sp"
            android:textColor="#ffffff" />

    </LinearLayout>

    <TextView
        android:id="@+id/emptyPlaylistMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_playlist"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>